--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -12,7 +12,7 @@
 
 @keyframes bob {
   50% {
-    transform: translateY(8px);
+    transform: translateY(16px);
   }
 }
 
@@ -25,6 +25,18 @@
   }
   100% {
     transform: rotate(22deg);
+  }
+}
+
+@keyframes rope-swivel {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(30deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }
 
